tests/pos/indented-parens.scala
def f(x: Int)
     (y: Int): Int = x + y


@main def Test =
  val x = f(1)
    (2)
    + f(1)
       {2}
  { println(x) }

